--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                             alert("失败");
                             console.log(XMLHttpRequest.status);//200客户端请求已成功
                             console.log(XMLHttpRequest.readyState);//4响应内容解析完成，可以在客户端调用了
-                            console.log(textStatus);//parsererror
-            }
+                            console.log(textStatus);
 			});
 		})
 		$(function(){
