--- a/manager_login.html
+++ b/manager_login.html
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd">
 <!-- saved from url=(0064)http://www.17sucai.com/preview/137615/2015-01-15/demo/index.html -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><HTML 
 xmlns="http://www.w3.org/1999/xhtml"><HEAD><META content="IE=11.0000" 
 http-equiv="X-UA-Compatible">
  
 <META http-equiv="Content-Type" content="text/html; charset=utf-8"> 
-<TITLE>登录页面</TITLE> 
+<TITLE>管理员登陆页面</TITLE> 
 <SCRIPT src="js/jquery-1.11.2.js" type="text/javascript"></SCRIPT>
  
 <STYLE>
@@ -130,7 +130,7 @@ a{
 	border-top-width: 1px; 
 	border-top-style: solid;
 }
-.sub{
+.subm{
 	background: rgb(0, 142, 173); 
 	padding: 7px 10px; 
 	border-radius: 4px; 
@@ -193,13 +193,8 @@ $(function(){
 <DIV class="bn">
 <P style="margin: 0px 35px 20px 45px;">
 <SPAN style="float: left;">
-<A style="color: rgb(204, 204, 204);" 
-href="#">忘记密码?
-</A>
 </SPAN> 
 <SPAN style="float: right;">
-<A style="color: rgb(204, 204, 204); margin-right: 10px;" 
-href="register.html">注册</A>  
  <input class="subm" href="#" value="登录" type="submit"> 
  </SPAN>        
  </P>
