--- a/backstage.html
+++ b/backstage.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>食堂后台管理</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style/style.css">
 	<script type="text/javascript" src="js/jquery-1.11.2.js"></script>
 	<script type="text/javascript" src="js/jquery.validate.min.js"></script>
 	<script type="text/javascript" src="js/messages_zh.js"></script>
